# midium

./: .gitignore  Cargo.toml  INSTALL.md  README.md
.claude/: settings.local.json
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: daemon.yml  pr-build.yml  release.yml  test.yml
app/: package-lock.json  package.json  svelte.config.js
app/.claude/: settings.local.json
app/src/: app.css
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
app/src-tauri/src/commands/: audio.rs  config.rs  fader_groups.rs  mappings.rs  midi.rs  mod.rs  plugins.rs  presets.rs  profiles.rs
app/src/lib/: ChannelStrip.svelte  Devices.svelte  FaderGroupEditor.svelte  MappingEditor.svelte  Mixer.svelte  PluginManager.svelte  PresetSelector.svelte  ProfileEditor.svelte  Settings.svelte  stores.ts  types.test.ts  types.ts
app/src/routes/: +page.svelte
crates/midium-audio/: Cargo.toml
crates/midium-audio/src/: backend.rs  lib.rs  linux.rs  macos.rs  macos_tap.rs  macos_utils.rs  shared.rs  windows.rs
crates/midium-audio/tests/: audio_tests.rs
crates/midium-core/: Cargo.toml
crates/midium-core/src/: config.rs  dispatch.rs  event_bus.rs  lib.rs  mapping.rs  types.rs
crates/midium-daemon/: Cargo.toml
crates/midium-daemon/src/: main.rs
crates/midium-midi/: Cargo.toml
crates/midium-midi/src/: group_manager.rs  lib.rs  manager.rs  parse.rs  profile.rs  profile_watcher.rs
crates/midium-plugins/: Cargo.toml
crates/midium-plugins/src/: lib.rs  runtime.rs
crates/midium-shortcuts/: Cargo.toml
crates/midium-shortcuts/src/: lib.rs
docs/: architecture.md
examples/: config.toml  mappings.toml  nanokontrol2_mappings.toml
plugins/: example_plugin.lua  media_controls.lua
profiles/: akai_midimix.toml  arturia_beatstep.toml  behringer_xtouch_mini.toml  generic.toml  korg_nanokontrol2.toml
