[package]
name = "midium-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "midium_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "0.8"

midium-core = { path = "../../crates/midium-core" }
midium-midi = { path = "../../crates/midium-midi" }
midium-audio = { path = "../../crates/midium-audio" }
midium-plugins = { path = "../../crates/midium-plugins" }
midium-shortcuts = { path = "../../crates/midium-shortcuts" }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
