[package]
name = "midium-audio"
version.workspace = true
edition.workspace = true

[dependencies]
midium-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { workspace = true }
objc2 = "0.6"
objc2-foundation = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58"
