[package]
name = "midium-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "midium"
path = "src/main.rs"

[dependencies]
midium-core = { workspace = true }
midium-midi = { workspace = true }
midium-audio = { workspace = true }
midium-plugins = { workspace = true }
midium-shortcuts = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
