[package]
name = "midium-midi"
version.workspace = true
edition.workspace = true

[dependencies]
midium-core = { workspace = true }
midir = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
